minor updates: _config.yml, index.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 
 title:  algosci 
-description:  description ;lsdfjl;saj 
+description:  Algorithms, Real Use Cases, Open-source Software
