Small edits to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 
 title:  algosci 
-description:  Algorithms, Use Cases, Open-source Software
+description:  Algorithms, Use Cases, Software
