_config lower case

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
 
-Title:  algosci 
+title:  algosci 
 
-Description: this is a description 
+description: this is a description 
