--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-slate
 
 title:  algosci 
 
-description: this is a description 
+description: Algorithms, practical use cases and open source software  
