--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-slate
 
 title:  algosci 
 
-description: Algorithms, practical use cases and open source software  
+description: algorithms, use cases, open source  
